# HermesDL

./: Cargo.toml  LICENSE  README.md
src/: downloader.rs  main.rs  request.rs  server.rs
src/downloader/: dto.rs  manager.rs  progress.rs  segment.rs
src/request/: client.rs  constant.rs  encoding.rs  response.rs  user_agent.rs
src/server/: config.rs  constant.rs  controller.rs  runner.rs
